<resources>
    <string name="app_name">Cobot</string>
    <string name="cobot_intro">Hey, my name is Cobot!</string>
    <string name="nav_home">Home</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_schedule">Schedule</string>
    <string name="chatbox_send_message_hint">What\'s your question?</string>
    <string name="profile_icon_description">A Profile Icon</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Log-in</string>
    <string name="sign_out">Log-out</string>
    <string name="no_user_signed_in">No user signed in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sent_message_sender">Me</string>
    <string name="cobot_name">Cobot</string>
    <string name="logged_in_as">"logged in as: "</string>
    <string-array name="error_responses">
        <item>Sorry! I don\'t know what you\'re asking for.</item>
        <item>Please make sure you enter something I know how to respond to!</item>
        <item>I\'m having a hard time understanding you. Can you try to make sure you don\'t mumble?</item>
    </string-array>
    <string name="view_past_chat">View past chats</string>
    <string name="lblSender">Sender: </string>
    <string name="lblDateTime">Date and Time: </string>
    <string name="selectDate">Please select a date you would like to view past messages from </string>
    <string name="nav_news">News</string>
    <string name="search_label">Search</string>
    <string name="empty_query_warning">Please enter a search term</string>
    <string name="written_by">"Written by "</string>
    <string name="published_on">"Published on "</string>
    <string name="failed_authentication">Authentication failed.</string>
    <string name="not_signed_in">You are not signed in.</string>
    <string name="message_added">Message added.</string>
    <string name="unable_to_save_msg">Unable to save message.</string>
    <string name="total_confirmed_label">"Total Confirmed: "</string>
    <string name="new_confirmed_label">"New Confirmed: "</string>
    <string name="total_deaths_label">"Total Deaths: "</string>
    <string name="new_deaths_label">"New Deaths: "</string>
    <string name="total_recovered_label">"Total Recovered: "</string>
    <string name="new_recovered_label">"New Recovered: "</string>
    <string name="global">global</string>
    <string name="all">all</string>
    <string name="total_cases">total_cases</string>
    <string name="err">err</string>
    <string name="new_cases">new_cases</string>
    <string name="total_deaths">total_deaths</string>
    <string name="new_deaths">new_deaths</string>
    <string name="total_recoveries">total_recoveries</string>
    <string name="new_recoveries">new_recoveries</string>
    <string name="menu_prompt">What would you like to know about?:\n1: Global Statistics\n2: Country Specific Statistics\n</string>
    <string name="statistic_menu_prompt">What statistic are you curious about?:\n1: Give me everything!\n2: Total Cases\n3: New Cases\n4: Total Deaths\n5: New Deaths\n6: Total Recoveries\n7: New Recoveries\n</string>
    <string name="country_specific_prompt">What country are you curious about? (Please type in the name of a country):\n</string>
    <string name="done_with_country">Do you have more questions? (Yes/No or Y/N to answer):\n</string>
    <string name="yes">Yes</string>
    <string name="y">Y</string>
</resources>