<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/chat_box">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/person_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/person_icon"
                android:contentDescription="@string/profile_icon_description"/>

            <TextView
                android:id="@+id/cobot_intro"
                style="@style/Heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cobot_intro" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/chat_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_above="@+id/bottom_navigation">

        <LinearLayout
            android:id="@+id/chat_box_messages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/SentMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Test Question" />

            <TextView
                style="@style/ReceivedMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Test Response" />

        </LinearLayout>

        <TextView
            android:id="@+id/chat_box_send_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/chatbox_send_message_hint"/>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_navigation"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        android:background="?android:attr/windowBackground" />

</RelativeLayout>